--- a/CQRS/build.gradle
+++ b/CQRS/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        apply plugin: 'idea'
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
