--- a/MinMax/build.gradle
+++ b/MinMax/build.gradle
@@ -5,12 +5,15 @@ plugins {
 group 'game'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile 'com.sparkjava:spark-core:2.8.0'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
