--- a/MinMax/build.gradle
+++ b/MinMax/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
 }
-
+apply plugin: "scala"
+apply plugin: "idea"
 group 'game'
 version '1.0-SNAPSHOT'
 
@@ -10,6 +11,8 @@ sourceCompatibility = 1.11
 repositories {
     mavenCentral()
 }
+sourceSets.main.scala.srcDir "src/main/scala"
+
 
 dependencies {
     compile 'com.sparkjava:spark-core:2.8.0'
