--- a/game-client/package.json
+++ b/game-client/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "net": "1.0.2",
     "rxjs": "6.2.2",
