--- a/MinMax/build.gradle
+++ b/MinMax/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'java'
 }
@@ -11,10 +12,18 @@ sourceCompatibility = 1.11
 repositories {
     mavenCentral()
 }
-sourceSets.main.scala.srcDir "src/main/scala"
-
-
+sourceSets {
+    main {
+        scala {
+            srcDirs = ['src/main/scala', 'src/main/java']
+        }
+        java {
+            srcDirs = []
+        }
+    }
+}
 dependencies {
+    compile 'org.scala-lang:scala-library:2.12.6'
     compile 'com.sparkjava:spark-core:2.8.0'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
